Update to run on Google Colab

--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -21,9 +21,9 @@
     "srcpath = Path(\"src\")\n",
     "\n",
     "if IN_COLAB and not srcpath.exists(): # if running in Colab --> download src if not exists\n",
-    "    !apt-get install subversion\n",
-    "    !svn checkout https://github.com/nguyenhoa93/cnn-visualization-keras-tf2/trunk/src\n",
-    "    !svn checkout https://github.com/nguyenhoa93/cnn-visualization-keras-tf2/trunk/images"
+    "    !git clone https://github.com/nguyenhoa93/cnn-visualization-keras-tf2\n",
+    "    !mv cnn-visualization-keras-tf2/src .\n",
+    "    !mv cnn-visualization-keras-tf2/images ."
    ]
   },
   {
@@ -50,6 +50,8 @@
     }
    ],
    "source": [
+    "# @title Click the Run button below to start\n",
+    "\n",
     "import tensorflow as tf\n",
     "import io\n",
     "from PIL import Image\n",
